test/regression/src/test/idl/compiler/fail/badintf1.idl

/**
 * Repeated use of _l in the scope ::Paul should
 * be caught. This is strictly speakihng incorrect as the
 * initial '_' character renders these identifiers invalid. 
 * RESULT: Error trapped by idl compiler. 
 */
 
interface Paul {
  readonly attribute long _l;
  void _l(in short arg1);
};
